Add upload file demo.

--- a/src/DemoWebsite/Views/Shared/_Layout.cshtml
+++ b/src/DemoWebsite/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li>@Html.ActionLink("Car", "Index", "Car")</li>
                     <li>@Html.ActionLink("User", "Index", "User")</li>
                     <li>@*@Html.ActionLink("GUID", "Index", "GUIDTest")*@</li>
+                    <li>@Html.ActionLink("Uploading", "Uploading", "Home")</li>
                 </ul>
             </div>
         </div>
